--- a/.env_sample
+++ b/.env_sample
@@ -1,10 +1,10 @@
 APP_TITLE=abiesoft
 VERSION=v1.0.0
 # Konfigurasi Database   
-DBS_HOST=localhost
-DBS_NAME=tester
-DBS_USER=root
-DBS_PASS=qwe123
+DBS_HOST=
+DBS_NAME=
+DBS_USER=
+DBS_PASS=
 
 # 'production' ->  Web status menampilkan alert jika aplikasi sudah online
 # 'local' ->  Web status tidak akan menampilkan alert walaupun status aplikasi sudah online
